--- a/style.css
+++ b/style.css
@@ -11,9 +11,8 @@
 
 .canvas-container {
   display: block;
-  max-width: 1032px;
-  max-height: 1032px;
   margin: auto;
+  max-width: 512px;;
   border: 4px solid white;
   box-shadow: 2px 2px 6px 2px rgba(0,0,0,0.5);
 }
